<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lsukev.dogorcat.MainActivity"
    android:background="#39ffeb">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="475dp"
        android:id="@+id/scrollView"
        android:background="#fdfdfd"
        android:padding="5dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/title_canine"
                android:id="@+id/textView" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignTop="@+id/scrollView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:id="@+id/canineRadioGroup">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No"
                    android:id="@+id/rbNo"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Yes"
                    android:id="@+id/rbYes"
                    android:checked="false" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/title_comfortable_felines"
                android:id="@+id/textView2"
                android:layout_marginTop="5dp" />

            <SeekBar
                android:max="10"

                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/seekBar"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Comfortablesness:"
                android:id="@+id/txtComfort"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/title_cutest"
                android:id="@+id/textView3"
                android:layout_marginTop="25dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_dog"
                android:id="@+id/cbDog"
                android:checked="false" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_cat"
                android:id="@+id/cbCat"
                android:checked="false" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_parrot"
                android:id="@+id/cbParrot"
                android:checked="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/title_drool"
                android:id="@+id/textView4"
                android:layout_marginTop="10dp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/droolRadioGroup">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No"
                    android:id="@+id/rbDroolNo"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Yes"
                    android:id="@+id/rbDroolYes"
                    android:checked="false" />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_below="@id/scrollView"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:text="@string/button_title"
        android:id="@+id/btnShowResults" />

</RelativeLayout>
